[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Taein Min <maintain0404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.3.6"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.7"

[tool.poetry.group.test]
optional = true

    [tool.poetry.group.test.dependencies]
    pytest = "^7.4.3"
    pytest-asyncio = "^0.23.2"

[tool.ruff]
select = ['E', 'F', 'I', 'UP']
src = ['server', 'tests']

    [tool.ruff.isort]  # rule I
    extra-standard-library = ["typing_extensions"]
    required-imports = ["from __future__ import annotations"]

    [tool.ruff.pydocstyle]  # rule D
    convention = 'google'

[tool.pytest.ini_options]
pythonpath = ["./"]
testpaths = ['./tests']
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
